# swagger.yaml
@@ -62,6 +62,10 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/Utente'
+        '404':
+          description: 'User not found'
+        '500':
+          description: 'Internal server error'
         headers:
           Set-Cookie:
             schema:
@@ -82,12 +86,10 @@ paths:
       security:
         - cookieAuth: []
       responses:
-        '400':
-          description: Invalid username
-        '403':
-          description: Forbidden
-        '404':
-          description: User not found
+        '200':
+          description: OK
+        '401':
+          description: Unauthorized
         headers:
           Set-Cookie:
             schema:
@@ -114,6 +116,8 @@ paths:
             $ref: '#/definitions/Utente'
         '400':
           description: Invalid input
+        '409':
+          description: User already exists
         '500':
           description: Internal server error
         headers:
@@ -133,6 +137,8 @@ paths:
           description: OK
           schema:
             $ref:  '#/definitions/Utente'
+        '500':
+          description: Internal server error
         headers:
           Set-Cookie:
             schema:
@@ -158,12 +164,17 @@ paths:
       responses:
         '200':
           description: OK
+          schema:
+            token:
+              type: string
+            username:
+              type: string
         '401':
           description: Wrong password
-        '403':
-          description: Forbidden
         '404':
           description: User not found
+        '500':
+          description: Internal server error
         headers:
           Set-Cookie:
             schema:
@@ -203,8 +214,11 @@ paths:
       responses:
         '200':
           description: OK
+          schema:
+            IsFollowing:
+              type: boolean
         '404':
-          description: Utente non trovato
+          description: User not found
         headers:
           Set-Cookie:
             schema:
@@ -230,8 +244,11 @@ paths:
       responses:
         '200':
           description: OK
-        '404':
-          description: User not found
+          schema:
+            email:
+              type: string
+        '400':
+          description: Bad email format
         headers:
           Set-Cookie:
             schema:
@@ -257,8 +274,8 @@ paths:
       responses:
         '200':
           description: OK
-        '404':
-          description: User not found
+        '400':
+          description: Bad password format
         headers:
           Set-Cookie:
             schema:
@@ -284,10 +301,11 @@ paths:
       responses:  
         '200':
           description: OK
+          schema:
+            nsfw:
+              type: string
         '400':
-          description: Invalid setting
-        '404':
-          description: User not found
+          description: Invalid NSFW setting
         headers:
           Set-Cookie:
             schema:
@@ -313,10 +331,11 @@ paths:
       responses:  
         '200':
           description: OK
+          schema:
+            lingua:
+              type: string
         '400':
           description: Invalid setting
-        '404':
-          description: User not found
         headers:
           Set-Cookie:
             schema:
@@ -338,6 +357,8 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/Post'
+        '500':
+          description: Internal server error
         headers:
           Set-Cookie:
             schema:
@@ -361,6 +382,10 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/Post'
+        '404':
+          description: Post not found
+        '500':
+          description: Internal server error
         headers:
           Set-Cookie:
             schema:
@@ -384,6 +409,10 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/Post'
+        '404':
+          description: User does not exist
+        '500':
+          description: Internal server error
         headers:
           Set-Cookie:
             schema:
@@ -411,11 +440,10 @@ paths:
         '200':
           description: OK
           schema: 
-            $ref: '#/definitions/Post'
-        '400':
-          description: Invalid input
-        '403': 
-          description: Forbidden
+            id:
+              type: string
+        '404':
+          description: Post not found
         '500':
           description: Internal server error
         headers:
@@ -448,11 +476,12 @@ paths:
         '200':
           description: OK
           schema:
-            $ref: '#/definitions/Post'
-        '400':
-          description: Invalid input
-        '403': 
-          description: Forbidden
+            PunteggioPost:
+              type: number
+            ValutazioneAttuale: 
+              type: number
+        '404':
+          description: Resource not found
         '500':
           description: Internal server error
         headers:
@@ -493,10 +522,10 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/Post'
-        '400':
-          description: Invalid input
-        '403':
-          description: Forbidden
+        '401':
+          description: Unauthorized
+        '404':
+          description: Post not found
         '500':
           description: Internal server error
         headers:
@@ -527,11 +556,12 @@ paths:
         '200':
           description: OK
           schema:
-            $ref: '#/definitions/Post'
-        '400':
-          description: Invalid input
-        '403':
-          description: Forbidden
+            id:
+              type: string
+            username:
+              type: string
+        '404':
+          description: Post not found
         '500':
           description: Internal server error
         headers:
@@ -559,11 +589,10 @@ paths:
         '200':
           description: OK
           schema:
-            $ref: '#/definitions/Post'
+            Id:
+              type: string
         '400':
-          description: Invalid input
-        '403':
-          description: Forbidden
+          description: Post already exists
         '500':
           description: Internal server error
         headers:
@@ -588,10 +617,13 @@ paths:
       security:
         - cookieAuth: []
       responses:
-        '400':
-          description: Invalid post id
-        '403':
-          description: Forbidden
+        '200':
+          description: OK
+          schema:
+            id:
+              type: string
+        '401':
+          description: Unauthorized
         '404':
           description: Post not found
         headers:
@@ -623,11 +655,8 @@ paths:
         '200':
           description: OK
           schema:
-            $ref: '#/definitions/Commento_Post'
-        '400':
-          description: Invalid input
-        '403': 
-          description: Forbidden
+            Id:
+              type: string
         '500':
           description: Internal server error
         headers:
@@ -650,10 +679,12 @@ paths:
           schema:
             type: string
       responses:
-        '400':
-          description: Invalid association id
-        '404':
-          description: Comment not found
+        '200':
+          description: OK
+          schema:
+            $ref: '#/definitions/Commento_Post'
+        '500':
+          description: Internal server error
         headers:
           Set-Cookie:
             schema:
@@ -674,12 +705,14 @@ paths:
           schema:
             type: string
       responses:
+        '200':
+          description: OK
+          schema:
+            $ref: '#/definitions/Commento_Post'
         '404':
           description: Comment not found
         '500':
           description: Internal server error
-        '200':
-          description: OK
       headers:
         Set-Cookie:
           schema:
@@ -700,12 +733,13 @@ paths:
       security:
         - cookieAuth: []
       responses:
-        '400':
-          description: Invalid comment id
-        '403':
-          description: Forbidden
-        '404':
-          description: Comment not found
+        '200':
+          description: OK
+          schema:
+            id:
+              type: string
+        '401':
+          description: Unauthorized
         headers:
           Set-Cookie:
             schema:
@@ -733,11 +767,10 @@ paths:
         '200':
           description: OK
           schema: 
-            $ref: '#/definitions/Commento_Post'
-        '400':
-          description: Invalid input
-        '403': 
-          description: Forbidden
+            id:
+              type: string
+        '404':
+          description: Comment not found
         '500':
           description: Internal server error
         headers:
@@ -769,11 +802,14 @@ paths:
         '200':
           description: OK
           schema:
-            $ref: '#/definitions/Commento_Post'
+            PunteggioCommento:
+              type: number
+            ValutazioneAttuale:
+              type: number
         '400':
           description: Invalid input
-        '403': 
-          description: Forbidden
+        '404': 
+          description: Resource not found
         '500':
           description: Internal server error
         headers:
@@ -805,11 +841,12 @@ paths:
         '200':
           description: OK
           schema:
-            $ref: '#/definitions/Commento_Post'
-        '400':
-          description: Invalid input
-        '403': 
-          description: Forbidden
+            id:
+              type: string
+            testo:
+              type: string
+        '401':
+          description: Unauthorized
         '500':
           description: Internal server error
         headers:
@@ -841,11 +878,8 @@ paths:
         '200':
           description: OK
           schema:
-            $ref: '#/definitions/Commento_Profilo'
-        '400':
-          description: Invalid input
-        '403':
-          description: Forbidden
+            Id:
+              type: string
         '500':
           description: Internal server error
         headers:
@@ -868,10 +902,12 @@ paths:
           schema:
             type: string
       responses:
-        '400':
-          description: Invalid profile name
-        '404':
-          description: Profile not found
+        '200':
+          description: OK
+          schema:
+            $ref: '#/definitions/Commento_Profilo'
+        '500':
+          description: Internal server error
         headers:
           Set-Cookie:
             schema:
@@ -894,12 +930,17 @@ paths:
       security:
         - cookieAuth: []
       responses:
-        '400':
-          description: Invalid comment Id
-        '403':
-          description: Frobidden
+        '200':
+          description: OK
+          schema:
+            id:
+              type: string
+        '401':
+          description: Unauthorized
         '404': 
           description: Comment not found
+        '500':
+          description: Internal server error
         headers:
           Set-Cookie:
             schema:
@@ -920,12 +961,12 @@ paths:
       security:
         - cookieAuth: []
       responses:
-        '404': 
-          description: Comment not found
+        '200':
+          description: OK
+          schema:
+            $ref: '#/definitions/Commento_Profilo'
         '500':  
           description: Internal server error
-        '200': 
-          description: OK
         headers:
           Set-Cookie:
             schema:
@@ -953,11 +994,10 @@ paths:
         '200':
           description: OK
           schema: 
-            $ref: '#/definitions/Commento_Profilo'
-        '400':
-          description: Invalid input
-        '403': 
-          description: Forbidden
+            id:
+              type: string
+        '404': 
+          description: Comment not found
         '500':
           description: Internal server error
         headers:
@@ -990,10 +1030,10 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/Commento_Profilo'
-        '400':
-          description: Invalid input
-        '403': 
-          description: Forbidden
+        '401':
+          description: Unauthorized
+        '404':
+          description: Comment not found
         '500':
           description: Internal server error
         headers:
@@ -1025,11 +1065,14 @@ paths:
         '200':
           description: OK
           schema:
-            $ref: '#/definitions/Commento_Profilo'
+            PunteggioCommento:
+              type: number
+            ValutazioneAttuale:
+              type: number
         '400':
           description: Invalid input
-        '403': 
-          description: Forbidden
+        '404': 
+          description: Comment not found
         '500':
           description: Internal server error
         headers:
